force-app/main/default/objects/Currency__c/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exchange Rate</label>
    <referenceTo>Exchange_Rate_Of_Thai_FCY__c</referenceTo>
    <relationshipLabel>Currency</relationshipLabel>
    <relationshipName>Currency</relationshipName>
    <type>Lookup</type>
</CustomField>