force-app/main/default/objects/Currency__c/fields/FlagForAcctPlan__c.field-meta.xml
<CustomField>
    <fullName>FlagForAcctPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for account plan</description>
    <label>Flag for account plan</label>
    <type>Checkbox</type>
</CustomField>