force-app/main/default/objects/Currency__c/fields/ShortName__c.field-meta.xml
<CustomField>
    <fullName>ShortName__c</fullName>
    <description>Short Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Short Name</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>