force-app/main/default/objects/Currency__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Exchange_Rate__c</columns>
    <columns>FlagForAcctPlan__c</columns>
    <columns>Full_Name__c</columns>
    <columns>SEQ__c</columns>
    <columns>ShortName__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>